--- a/README
+++ b/README
@@ -225,74 +225,74 @@ METHODS
         The required Location parameter
 
   Location
-        The "Location" method returns the HTML::Location that was used when
-        creating the Image::Delivery.
+    The "Location" method returns the HTML::Location that was used when
+    creating the Image::Delivery.
 
   filename $TransformPath | $Provider
-        The "filename" method determines, for a given $TransformPath or
-        $Provider, the file name that the Image should be written to,
-        excluding the file type.
+    The "filename" method determines, for a given $TransformPath or
+    $Provider, the file name that the Image should be written to, excluding
+    the file type.
 
-        This is the method most likely to be overloaded, so enable a
-        different naming scheme.
+    This is the method most likely to be overloaded, so enable a different
+    naming scheme.
 
   exists $TransformPath | $Provider
-        For a given Digest::TransformPath, or a ::Provider which contains
-        one, check to see the a file exists for it in the cache already.
+    For a given Digest::TransformPath, or a ::Provider which contains one,
+    check to see the a file exists for it in the cache already.
 
-        Returns the HTML::Location of the image if it exists, false if it
-        does not exist, or "undef" on error.
+    Returns the HTML::Location of the image if it exists, false if it does
+    not exist, or "undef" on error.
 
   get $TransformPath | $Provider
-        The "get" methods gets the contents of a cached file from the cache,
-        if it exists. You should generally check that the image "exists"
-        first before trying to get it.
+    The "get" methods gets the contents of a cached file from the cache, if
+    it exists. You should generally check that the image "exists" first
+    before trying to get it.
 
-        Returns a reference to a SCALAR containing the image data if the
-        image exists. Returns "undef" if the image does not exist, or some
-        other error occurs.
+    Returns a reference to a SCALAR containing the image data if the image
+    exists. Returns "undef" if the image does not exist, or some other error
+    occurs.
 
   set $Provider
-        The "set" method stores an image in the cache, shortcutting if the
-        image has already been stored.
+    The "set" method stores an image in the cache, shortcutting if the image
+    has already been stored.
 
-        Returns the HTML::Location of the stored image on success, or
-        "undef" on error.
+    Returns the HTML::Location of the stored image on success, or "undef" on
+    error.
 
   clear $TransformPath
-        The "clear" method allows you to explicitly delete an image from the
-        cache. This would generally be done for security purposes, as the
-        cache cleaners will generally harvest files directly, rather than
-        going via TransformPaths.
+    The "clear" method allows you to explicitly delete an image from the
+    cache. This would generally be done for security purposes, as the cache
+    cleaners will generally harvest files directly, rather than going via
+    TransformPaths.
 
-        Returns true if the image was removed, or did not exist. Returns
-        "undef" on error.
+    Returns true if the image was removed, or did not exist. Returns "undef"
+    on error.
 
 TO DO
-        - Add ability to mask indexes with empty HTML files
+    - Add ability to mask indexes with empty HTML files
 
-        - Add cache clearing capabilities
+    - Add cache clearing capabilities
 
-        - Add file locking to prevent race conditions in the cache
+    - Add file locking to prevent race conditions in the cache
 
-        - Add pluggable cache cleaners
+    - Add pluggable cache cleaners
 
 SUPPORT
-        All bugs should be filed via the bug tracker at
+    All bugs should be filed via the bug tracker at
 
-        <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Image-Delivery>
+    <http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Image-Delivery>
 
-        For other issues, contact the author
+    For other issues, contact the author
 
 AUTHORS
-        Adam Kennedy <cpan@ali.as>
+    Adam Kennedy <adamk@cpan.org>
 
 COPYRIGHT
-        Copyright 2004 - 2007 Adam Kennedy.
+    Copyright 2004 - 2007 Adam Kennedy.
 
-        This program is free software; you can redistribute it and/or modify
-        it under the same terms as Perl itself.
+    This program is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
 
-        The full text of the license can be found in the LICENSE file
-        included with this module.
+    The full text of the license can be found in the LICENSE file included
+    with this module.
 
